# task_manager_capstone

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile copy  Jenkinsfile copy 3  Jenkinsfile copy 4  ReadMe.md  docker.compose.yml  main.py  pyproject.toml  requirements.txt  sonar-project.properties  tasks.db
infra/: docker-compose.yml  remove_dock.sh  start.sh
infra/jenkins/: Dockerfile
jenkins/: DockerFile
k8s/: deployment.yaml  service.yaml
task_man/: main.py
tests/: test_main.py  tests_main.py
