[project]
name = "task_man"
version = "0.1.0"
description = "Task Manager FastAPI app with SQLite"
authors = [
    {name = "rahulcr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
