[tool.poetry]
name = "task_man"
version = "0.1.0"
description = "Task Manager FastAPI app with SQLite"
authors = ["rahulcr <rahulcr@example.com>"]
readme = "ReadMe.md"  
license = "MIT"  # Optional but recommended

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
# Add pytest for testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"